# clean_architecture_rust

./: .env-sample  Cargo.toml  Makefile  README.md  docker-compose.yml
docker/: Dockerfile.dev
migrations/: 20240925031655_init.up.sql
src/: main.rs
src/domain/: mod.rs
src/domain/model/: task.rs
src/domain/primitive/: date.rs  id.rs
src/domain/service/: mod.rs
src/domain/service/task/: create.rs  list.rs  update.rs
src/infrastructure/: mod.rs
src/infrastructure/csv/: mod.rs
src/infrastructure/csv/query/: mod.rs  task.rs
src/infrastructure/csv/repository/: mod.rs  task.rs
src/infrastructure/database/: mod.rs  transaction.rs
src/infrastructure/database/query/: mod.rs  task.rs
src/infrastructure/database/repository/: mod.rs  task.rs
src/infrastructure/graphql/: mod.rs  server.rs
src/infrastructure/graphql/resolver/: mutation.rs  query.rs
src/infrastructure/graphql/schema/: mod.rs
src/infrastructure/graphql/schema/scaler/: date.rs
src/infrastructure/memory/: mod.rs
src/infrastructure/memory/query/: mod.rs  task.rs
src/infrastructure/memory/repository/: mod.rs  task.rs
src/interface_adapter/: mod.rs
src/interface_adapter/adapter/: mod.rs  task.rs
src/interface_adapter/controller/: mod.rs  task.rs
src/interface_adapter/gateway/: task.rs
src/interface_adapter/port/: task.rs
src/shared/: mod.rs
src/shared/config/: mod.rs
src/shared/error/: mod.rs
src/shared/logger/: mod.rs
src/shared/test/: mod.rs
