[package]
name = "clean_architecture_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = "7.0.10"
async-graphql-axum = "7.0.10"
async-trait = "0.1.83"
axum = "0.7.6"
chrono = "0.4.38"
dotenv = "0.15.0"
futures = "0.3.30"
log = "0.4.22"
log4rs = "1.3.0"
once_cell = "1.19.0"
sqlx = { version = "0.8.2", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid"] }
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"] }
tracing-subscriber = "0.3.18"
uuid = { version = "1.10.0", features = ["v4", "serde"] }

[dev-dependencies]
env_logger = "0.11.5"
